# amplifier-universe

./: .gitignore  .gitmodules  GLOSSARY.md  README.md
docs/: BRINGING_A_SKILL_INTO_AMPLIFIER.md
study-guide/: README.md
study-guide/audit-findings/: 01-core.md  02-foundation.md  03-app.md  04-independent-reaudit.md
study-guide/parts/: 00-introduction.md  01-kernel.md  02-composition.md  03-authoring.md  04-app-and-ecosystem.md
study-guide/presentation/: README.md  amplifier-5min.html  render.py
verification/live-fire/: REPORT.md
verification/live-fire/probe_a/: my-bundle.md  run.py
verification/live-fire/probe_b/: bundles.py
verification/live-fire/probe_c/: run.py
verification/live-fire/probe_c/amplifier-module-tool-noop/: pyproject.toml
verification/live-fire/probe_c/amplifier-module-tool-noop/amplifier_module_tool_noop/: __init__.py
verification/reader-test/: FRICTION_LOG.md  PLAN.md
verification/reader-test/tool-now/: README.md  pyproject.toml
verification/reader-test/tool-now/amplifier_module_tool_now/: __init__.py  tool.py
verification/reader-test/tool-now/bundle/: bundle.md
verification/reader-test/tool-now/tests/: test_tool_now.py
